--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,7 +94,7 @@ add_dependencies(simple_wallet version)
 add_dependencies(payment_gate_services version)
 add_dependencies(p2p version)
 
-set_property(TARGET simple_wallet PROPERTY OUTPUT_NAME "simple_wallet")
-set_property(TARGET payment_gate_services PROPERTY OUTPUT_NAME "walletd")
+set_property(TARGET simple_wallet PROPERTY OUTPUT_NAME "pool_wallet")
+set_property(TARGET payment_gate_services PROPERTY OUTPUT_NAME "gaxwalletd")
 set_property(TARGET miner PROPERTY OUTPUT_NAME "miner")
-set_property(TARGET daemon PROPERTY OUTPUT_NAME "elienpd")
+set_property(TARGET daemon PROPERTY OUTPUT_NAME "gaxyd")
